--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,15 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.grails</groupId>
     <artifactId>grails-maven-plugin</artifactId>
-    <version>2.0.1</version>
+    <version>2.0.1.1</version>
     <packaging>maven-plugin</packaging>
+
+	<repositories>
+		<repository>
+			<id>codehaus.org.</id>
+			<url>http://repository.codehaus.org/org/codehaus/</url>
+		</repository>
+	</repositories>
 
     <name>Maven plugin for GRAILS applications</name>
     <description>This plugin allows you to integrate GRAILS applications into maven 2 builds.</description>
@@ -92,7 +99,13 @@
             <artifactId>jline</artifactId>
             <version>1.0</version>
         </dependency>
-                
+
+        <dependency>
+            <groupId>groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>1.7.10</version>
+        </dependency>
+
         <dependency>
             <groupId>org.grails</groupId>
             <artifactId>grails-bootstrap</artifactId>
